# recipe-parser-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md  flake.nix  justfile
.github/workflows/: build.yaml  bump.yaml  pr.yaml
js-tests/: index.js  package-lock.json  package.json
src/: error.rs  lib.rs  types.rs
tests/: wasm.rs
