[package]
name = "recipe-parser-wasm"
authors = ["Santiago Fraire Willemoes <santiwilly@gmail.com>"]
description = "Parse recipe-lang in your browser"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/reciperium/recipe-parser-wasm"
homepage = "https://github.com/reciperium/recipe-parser-wasm"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
recipe-parser = {version = "0.8.4", features = ["serde", "wasm"]}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde = { version = "1.0.203", features = ["derive"] }
tsify = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
